@@ -26,6 +26,7 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1578504 : Use <label> for signature pref (Tim Gerundt).
     * Patch #1577111 : German translation update (Tim Gerundt).
     * Patch #1575815 : Small change to structured text (Tim Gerundt).
     * Patch #1575206 : Optimize $alt_next and $alt_prev (Tim Gerundt).
